--- a/SimpleProject/Views/Home/Index.cshtml
+++ b/SimpleProject/Views/Home/Index.cshtml
@@ -1,7 +1,28 @@
-﻿@model Product
+﻿@model IEnumerable<Category>
 @{
     ViewBag.Title = "Product List";
 }
-<h1 class="alert alert-success">Wellcome @ViewBag.Name</h1>
- <h1>Product name: @Model.Name </h1>
+
+
+@foreach(var item in Model)
+{
+    <h1>@item.Name</h1>
+    <div class="row">
+    @foreach(var product in item.Products)
+    {
+            <div class="card col-lg-4 col-md-6 col-sm-12">
+                <div class="card-header">
+                    @product.Name
+                </div>
+                <div class="card-body">
+                    @product.Price
+                </div>
+                <div class="card-footer">
+                    <a asp-action="Details" asp-controller="Product" asp-route-id="@item.Id" class="btn btn-info"> details</a>
+                </div>
+            </div>
+       
+    }
+    </div>
+}
 
