--- a/SimpleProject/Views/_ViewImports.cshtml
+++ b/SimpleProject/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SimpleProject.Models;
 @using SimpleProject.ViewModels;
+@using SimpleProject.Services.Interfaces;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
