Added Toastr Notification Code

--- a/SimpleProject/Views/Home/Index.cshtml
+++ b/SimpleProject/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Category>
 @inject IProductService _productService;
 @{
-    ViewBag.Title = "Product List";
+    ViewBag.Title = "Home List";
 }
 
 <h1 class="text-center">@_productService.GetTitle()</h1>
