--- a/SimpleProject/Views/Product/Index.cshtml
+++ b/SimpleProject/Views/Product/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model IEnumerable<SimpleProject.Models.Product>
 
+<partial name="_Notifications"></partial>
+<h1>@ViewBag.UserName</h1>
 <p>
     <a asp-action="Create" class="btn btn-success">Create New</a>
 </p>
