--- a/SimpleProject/Views/Shared/_Layout.cshtml
+++ b/SimpleProject/Views/Shared/_Layout.cshtml
@@ -1,10 +1,13 @@
-﻿<!DOCTYPE html>
+﻿@inject IHttpContextAccessor _contextAccessor;
+<!DOCTYPE html>
 
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" />
+
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary container">
@@ -14,20 +17,20 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav me-auto">
                     <li class="nav-item">
                         <a asp-controller="Product" asp-action="Index" class="nav-link">Products</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                        <a asp-controller="Home" asp-action="Privacy" class="nav-link">Privacy</a>
                     </li>
                 </ul>
+               @*  <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <!-- hello: @_contextAccessor.HttpContext?.Request.Cookies["userName"]-->
+                        hello: @_contextAccessor.HttpContext?.Session.GetString("userName")
+                    </li>
+                </ul> *@
             </div>
         </div>
     </nav>
