Added Set Culture

--- a/SimpleProject/Views/Product/Index.cshtml
+++ b/SimpleProject/Views/Product/Index.cshtml
@@ -12,10 +12,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Id)
+                @_sharedResources[SharedResourcesKeys.Id]
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                @_sharedResources[SharedResourcesKeys.Name]
             </th>
             <th>
                 @_sharedResources[SharedResourcesKeys.Price]
