--- a/SimpleProject/Views/Product/Index.cshtml
+++ b/SimpleProject/Views/Product/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.Extensions.Localization
 @using SimpleProject.Resources
 @inject IStringLocalizer<SharedResources> _sharedResources;
-@model IEnumerable<SimpleProject.Models.Product>
+@model IEnumerable<SimpleProject.ViewModels.GetProductListViewModel>
 
 <partial name="_Notifications"></partial>
 <h1>@ViewBag.UserName</h1>
