--- a/SimpleProject/Views/Product/Update.cshtml
+++ b/SimpleProject/Views/Product/Update.cshtml
@@ -4,9 +4,14 @@
     <form asp-action="Update" method="post" enctype="multipart/form-data">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div>
-            <label asp-for="Name"></label>
-            <input asp-for="Name" class="form-control" />
-            <span asp-validation-for="Name" class="text-danger"></span>
+            <label asp-for="NameAr"></label>
+            <input asp-for="NameAr" class="form-control" />
+            <span asp-validation-for="NameAr" class="text-danger"></span>
+        </div>
+        <div>
+            <label asp-for="NameEn"></label>
+            <input asp-for="NameEn" class="form-control" />
+            <span asp-validation-for="NameEn" class="text-danger"></span>
         </div>
         <div>
             <label asp-for="Price"></label>
