--- a/SimpleProject/Views/Product/Delete.cshtml
+++ b/SimpleProject/Views/Product/Delete.cshtml
@@ -3,7 +3,7 @@
 <div class="card">
     <h5 class="card-header">Are you sure you want to delete this product?</h5>
     <div class="card-body">
-        <h5 class="card-title">@Model.Name</h5>
+        <h5 class="card-title">@Model.NameAr</h5>
         <p class="card-text">@Model.Price</p>
     </div>
     <div class="card-footer">
