Added RTL and LTR based on Culture

--- a/SimpleProject/Views/_ViewImports.cshtml
+++ b/SimpleProject/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using SimpleProject.Models;
 @using SimpleProject.ViewModels;
 @using SimpleProject.Services.Interfaces;
+@using SimpleProject.Helpers;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
