--- a/SimpleProject/Views/Shared/_Layout.cshtml
+++ b/SimpleProject/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                         <a asp-controller="Product" asp-action="Index" class="nav-link">Products</a>
                     </li>
                     <li class="nav-item">
+                        <a asp-controller="Category" asp-action="Index" class="nav-link">Categories</a>
+                    </li>
+                    <li class="nav-item">
                         <a asp-controller="Home" asp-action="Privacy" class="nav-link">Privacy</a>
                     </li>
                 </ul>
