--- a/SimpleProject/Views/_ViewImports.cshtml
+++ b/SimpleProject/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using SimpleProject.Models;
-@using SimpleProject.ViewModels;
+@using SimpleProject.ViewModels.Products;
+@using SimpleProject.ViewModels.Categories;
 @using SimpleProject.Services.Interfaces;
 @using SimpleProject.Helpers;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
