--- a/SimpleProject/Views/_ViewImports.cshtml
+++ b/SimpleProject/Views/_ViewImports.cshtml
@@ -3,4 +3,7 @@
 @using SimpleProject.ViewModels.Categories;
 @using SimpleProject.Services.Interfaces;
 @using SimpleProject.Helpers;
+@using SimpleProject.ViewModels.Identity;
+@using Microsoft.AspNetCore.Identity;
+@using SimpleProject.Models.Identity;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
